--- a/Dfold.ipynb
+++ b/Dfold.ipynb
@@ -192,36 +192,20 @@
     }
    ],
    "source": [
-    "protein_chains = []\n",
-    "for idx,row in tqdm(df.iterrows(), total=len(df), desc='Fetching ProteinChains'):\n",
-    "    id = row['id']\n",
-    "    pdb_id = getPdbId(id, url)\n",
-    "    out_membraine_chain = ProteinChain.from_rcsb(pdb_id)\n",
-    "    protein_chains.append(out_membraine_chain)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "List saved successfully!\n"
-     ]
-    }
-   ],
-   "source": [
     "import pickle\n",
     "import os\n",
     "cache_path = 'protein_chains.pkl'\n",
     "if os.path.exists(cache_path):\n",
     "    with open(cache_path, 'rb') as file:\n",
-    "        loaded_list = pickle.load(file)\n",
-    "    print(\"Loaded list:\", loaded_list)\n",
+    "        protein_chains = pickle.load(file)\n",
+    "    print(\"Loaded list:\", protein_chains)\n",
     "else:\n",
+    "    protein_chains = []\n",
+    "    for idx,row in tqdm(df.iterrows(), total=len(df), desc='Fetching ProteinChains'):\n",
+    "        id = row['id']\n",
+    "        pdb_id = getPdbId(id, url)\n",
+    "        out_membraine_chain = ProteinChain.from_rcsb(pdb_id)\n",
+    "        protein_chains.append(out_membraine_chain)\n",
     "    with open(cache_path, 'wb') as file:\n",
     "        pickle.dump(protein_chains, file)\n",
     "    print(\"List saved successfully!\")"
